# spiderweb

./: .clang-format  .clang-tidy  CMakeLists.txt  arm-linux-gcc-7.5.cmake  conanfile.txt  gtest.cmake
Qt/: CMakeLists.txt  connect.cc
Qt/EventLoopEPoll/: CMakeLists.txt  eventdispatcher_epoll_p.cpp
benchmark/: BUILD.bazel  CONTRIBUTORS  README.md  setup.py
benchmark/.github/workflows/: build-and-test.yml  wheels.yml
benchmark/bindings/python/: build_defs.bzl
benchmark/config/: generate_export_header.bzl
benchmark/docs/: user_guide.md
benchmark/include/benchmark/: benchmark.h
benchmark/src/: benchmark.cc  benchmark_api_internal.cc  benchmark_name.cc  benchmark_register.cc  benchmark_runner.cc  benchmark_runner.h  cycleclock.h
benchmark/test/: BUILD  options_test.cc
benchmark/tools/gbench/: report.py
examples/reflect/: mystruct.h
examples/reflect/xml/: CMakeLists.txt  xmlreader.cc
include/spiderweb/: spiderweb_check.h
include/spiderweb/arch/: spiderweb_arch.hpp  spiderweb_endian.h
include/spiderweb/core/: spiderweb_async_wait_group.h  spiderweb_bimap.h  spiderweb_complete_queue.h  spiderweb_error_code.h  spiderweb_eventloop.h  spiderweb_future.h  spiderweb_notify.h  spiderweb_notify_spy.h  spiderweb_object.h  spiderweb_object_pool.h  spiderweb_process.h  spiderweb_range.h  spiderweb_sequence_hash.h  spiderweb_signal.h  spiderweb_synchronized.h  spiderweb_thread.cc  spiderweb_thread.h  spiderweb_thread_data.h  spiderweb_timer.h  spiderweb_tree.h  spiderweb_unbounded_queue.h  spiderweb_waiter.h
include/spiderweb/io/: spiderweb_binary_writer.hpp  spiderweb_bitmap_readwriter.h  spiderweb_buffer.h  (+1 more)
include/spiderweb/reflect/implement/json/nlohmann/: CMakeLists.txt  nl_impl_test.cc  nlohmann_json_reflection.hpp
spiderweb/: CMakeLists.txt  index_sequence.hpp  ppk_assert.cpp  spiderweb_binary_writer.hpp  spiderweb_binary_writer_test.cc  spiderweb_eventloop.cc  spiderweb_eventloop.h  spiderweb_eventloop_test.cc  spiderweb_eventsignal.h  spiderweb_eventsignal_benchmark.cc  spiderweb_object.cc  spiderweb_object.h  spiderweb_timer.cc  spiderweb_timer.h  spiderweb_timer_benchmark.cc  spiderweb_timer_test.cc
spiderweb/arch/: spiderweb_arch.hpp
spiderweb/core/: spiderweb_bimap_test.cc  spiderweb_complete_queue.cc  spiderweb_complete_queue_test.cc  spiderweb_error_code.cc  spiderweb_error_code.h  spiderweb_error_code_test.cc  spiderweb_event_spy.cc  spiderweb_event_spy.h  spiderweb_event_spy_test.cc  spiderweb_eventloop.cc  spiderweb_eventloop.h  spiderweb_eventloop_test.cc  spiderweb_eventsignal.h  spiderweb_eventsignal_benchmark.cc  spiderweb_future_test.cc  spiderweb_notify.h  spiderweb_notify_benchmark.cc  spiderweb_notify_spy.cc  spiderweb_notify_spy.h  spiderweb_notify_spy_test.cc  spiderweb_notify_test.cc  spiderweb_object.cc  spiderweb_object.h  spiderweb_object_pool_benchmark.cc  spiderweb_object_pool_test.cc  spiderweb_object_test.cc  spiderweb_process.cc  spiderweb_process_test.cc  spiderweb_range_test.cc  spiderweb_sequence_hash_test.cc  spiderweb_signal.cc  spiderweb_signal.h  spiderweb_signal_test.cc  spiderweb_synchronized.h  spiderweb_synchronized_test.cc  spiderweb_thread.cc  spiderweb_thread.h  spiderweb_thread_data.h  spiderweb_thread_data_test.cc  spiderweb_thread_message_server.h  (+13 more)
spiderweb/core/eventpp/: readme.md
spiderweb/core/eventpp/doc/: argumentadapter.md  callbacklist.md  eventqueue.md  heterogeneous.md  tutorial_callbacklist.md  tutorial_eventdispatcher.md  tutorial_eventqueue.md
spiderweb/core/eventpp/tests/tutorial/: CMakeLists.txt  tutorial_argumentadapter.cpp  tutorial_eventqueue.cpp
spiderweb/core/eventpp/tests/unittest/: test_queue_basic.cpp
spiderweb/core/internal/: asio_cast.h  index_sequence.hpp  move_tuple_wrapper.h  thread_check.h
spiderweb/io/: spiderweb_binary_writer.hpp  spiderweb_binary_writer_test.cc  spiderweb_bitmap_readwriter.h  spiderweb_bitmap_readwriter_test.cc  spiderweb_buffer.cc  spiderweb_buffer.h  spiderweb_named_pipe.cc  spiderweb_named_pipe.h  spiderweb_named_pipe_test.cc  spiderweb_process_fd.cc  spiderweb_process_fd.h
spiderweb/io/private/: spiderweb_named_pipe_private.h  spiderweb_process_fd_private.h  spiderweb_stream_private.h
spiderweb/net/: spiderweb_endpoint.cc  spiderweb_endpoint_visitor.h  spiderweb_tcp_server.cc  spiderweb_tcp_server.h  spiderweb_tcp_server_test.cc  spiderweb_tcp_socket.cc  spiderweb_tcp_socket.h  spiderweb_tcp_socket_connector.cc  spiderweb_tcp_socket_connector_test.cc  spiderweb_tcp_socket_test.cc  spiderweb_udp_socket.cc  spiderweb_udp_socket_test.cc  spiderweb_uds_server.cc  spiderweb_uds_server_test.cc  spiderweb_uds_socket.cc
spiderweb/net/private/: spiderweb_stream_private.h  spiderweb_tcp_server_private.h  spiderweb_tcp_socket_private.h  spiderweb_uds_server_private.h  spiderweb_uds_socket_private.h
spiderweb/reflect/: CMakeLists.txt  nljson_node.cc  nljson_node.h  pugixml_impl.cc  pugixml_impl_test.cc  reflect_enum.hpp  reflect_json.hpp  reflect_xml.hpp  yyjson_impl.cc  yyjson_impl_bench.cc  yyjson_impl_test.cc
spiderweb/reflect/enum_test/: CMakeLists.txt  enum_reflect_test.cc
spiderweb/reflect/implement/json/nlohmann/: nl_impl_bench.cc
spiderweb/reflect/implement/json/qt/: CMakeLists.txt  qt_impl_bench.cc
spiderweb/reflect/implement/json/yyjson/: CMakeLists.txt  yy_impl_bench.cc  yy_impl_test.cc  yyjson_json_reflection.hpp
spiderweb/reflect/implement/xml/pugixml/: CMakeLists.txt  pugixml_impl_test.cc  pugixml_xml_reflection.hpp
spiderweb/serial/: spiderweb_serialport.cc  spiderweb_serialport.h  spiderweb_serialport_test.cc  spiderweb_socketcan.cc  spiderweb_socketcan.h  spiderweb_socketcan_test.cc
spiderweb/serial/private/: spiderweb_serialport_private.h  spiderweb_socketcan_private.h
spiderweb/test/: spiderweb_test_stream.hpp
spiderweb/type/: spiderweb_any_view.h  spiderweb_any_view_test.cc  spiderweb_binary_view.h  spiderweb_binary_view_benchmark.cc  spiderweb_binary_view_test.cc  spiderweb_variant.cc  spiderweb_variant.h  spiderweb_variant_benchmark.cc  spiderweb_variant_test.cc
thrd/: CMakeLists.txt
thrd/yyjson/src/: yyjson.h
(+30 files in other folders)
